테스트파일

--- a/day02.html
+++ b/day02.html
@@ -1,6 +1,6 @@
 <html lang="ko">
 	<head>
-		<title></title>
+		<title>confirm함수</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,23 +8,16 @@
 		</style>
 	</head>
 	<body>
-		<label for="weather">Select the weather type today:</label>
-		<select id="weather">
-			<option value="">-- Make a choice --</option>
-			<option value="sunny">Sunny</option>
-			<option value="rainy">Rainy</option>
-			<option value="snowing">Snowing</option>
-			<option value="overcaset">Overcaset</option>
-		</select>
-		<p class="desc"></p>
+		<script>
+			function Vehicle(name , speed){
+				this.name = name ;
+				this.speed = speed;
+			}
+			Vehicle.prototype.drive = function (){
+				console.log(this.name + ' runs at ' + this.speed);
+			};
+			var truck = new Vehicle ('kim' , 100);
+			truck.drive();
+		</script>
 	</body>
-	<script>
-		var select = document.querySelector('select');
-		var txt = document.querySelector('.desc');
-
-		select.addEventListener('change',test);
-		function test(){
-			console.log("change");
-		}
-	</script>
 </html>
