--- a/day02.html
+++ b/day02.html
@@ -1,6 +1,6 @@
 <html lang="ko">
 	<head>
-		<title>confirm함수</title>
+		<title>prototype</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -18,7 +18,6 @@
 			};
 			var truck = new Vehicle ('kim' , 100);
 			truck.drive();
-			dsadsad
 		</script>
 	</body>
 </html>
