--- a/day04.html
+++ b/day04.html
@@ -1,6 +1,6 @@
 <html lang="ko">
 	<head>
-		<title>prototype</title>
+		<title>자바스크립트 연습</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,13 +8,6 @@
 		</style>
 	</head>
 	<body>
-		<button>press me</button>
-		<script>
-		var button = document.querySelector('button');
-			button.onclick = function (){
-				var name = prompt('what is your name?');
-				alert('hello ' + name + ' , nici to see you!');
-			}
-		</script>
+		master branch
 	</body>
 </html>
