카드게임 수정

--- a/day27.html
+++ b/day27.html
@@ -5,67 +5,61 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<link href="css/card.css" rel="stylesheet">
 	<style>
-		.board { width:100%; max-width:1200px; margin:0 auto; padding:50px;}
-		.board::after { display:block; clear:both; content:"";}
-		.board .card { float:left; width:calc(25% - 7.5px); height:300px; border:1px solid #333; box-sizing:border-box;}
-		.board .card.active { background-color:red;}
 	</style>
 </head>
 
 <body>
 	<div class="board">
-		
+
 	</div>
 	<script>
-		function Card(){
-			this.count = 4;
-			this.arr = [];
-			this.temp = [];
-			this.card = null;
+		function Card() {
+			this.count = 10;
+			this.cardArr = [];
 			this.board = document.querySelector('.board');
-			this.madeNum = function(){
-				for (var i = 0;  i < 2; i++){
-					for(var j = 0; j < this.count; j++){
-						this.arr.push(j);
-						var card = document.createElement('div');
-						this.board.appendChild(card);
-					}
-				}
-			}
+			this.card = null;
 			this.shuffle = function(){
-				var x = null;
-				this.card = document.querySelectorAll('.board > div');
-				for(var j = this.arr.length; j > 0; j--){
-					var random = Math.floor(Math.random() * j);
-					x = this.arr.splice(random , 1);
-					this.card[j - 1].classList.add('card' ,'card' + x)
-					this.card[j - 1].innerHTML="카드" + x;
+				this.card = this.board.querySelectorAll('div');
+				for(var k = this.cardArr.length; k > 0 ; k--){
+					var random = Math.floor(Math.random() * k);
+					var x = this.cardArr.splice(random , 1);
+					this.card[k - 1].after(this.card[random]);
+					this.card[k - 1].classList.add('card', 'card'+x);
+					this.card[k - 1].style.width = 100 / this.count +"%";
 				}
+					this.result(this.card);
 			}
-			this.cardClick = function (){
-				var that = this;
-				var targer = null;
-				for(var i = 0; i < this.card.length; i++){
-					(function(i){
-						that.card[i].addEventListener('click', function(e){
-							this.style.backgroundColor="red";
-							test(this);
-							this.classList.add('active');
-						})
-					})(i)
+			this.result = function(cards){
+				for(var y = 0; y < cards.length; y++){
+					this.card[y].addEventListener('click',function(){
+						this.classList.add('active');
+					})
 				}
-				function test(){
-					console.log(that.card.length);
-					for(var i = 0; i < that.card.length; i++){
-						if(that.card[i].classList.contains('active')){
-	
+
+			}
+			Card.prototype.product = function() {
+				for (var i = 0; i < 2; i++) {
+					for (var j = 0; j < this.count; j++) {
+						var cardAdd = document.createElement('div'),
+							linkAdd = document.createElement('a'),
+							frontAdd = document.createElement('img');
+							backAdd = document.createElement('img');
+							frontAdd.classList.add('font');
+							backAdd.classList.add('back');
+							frontAdd.src="images/card.png";
+							backAdd.src="images/card" +[j]+".png"
+						linkAdd.appendChild(frontAdd);
+						linkAdd.appendChild(backAdd);
+						cardAdd.appendChild(linkAdd);
+						this.board.appendChild(cardAdd);
+						this.cardArr.push(j);
 					}
 				}
 			}
-			this.madeNum();
+			this.product();
 			this.shuffle();
-			this.cardClick();
 		}
 		var card = new Card();
 	</script>
